--- a/app/src/main/res/layout/fragment_local_data.xml
+++ b/app/src/main/res/layout/fragment_local_data.xml
@@ -1,13 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LocalData">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/TEST_local_data_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/labelAmbientTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ambient_temperature_label" />
+
+        <TextView
+            android:id="@+id/localViewAmbientTemperatureData"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32sp" />
+
+        <TextView
+            android:id="@+id/labelProximity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/proximity_label" />
+
+        <TextView
+            android:id="@+id/localViewProximity"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32sp" />
+
+        <TextView
+            android:id="@+id/labelPressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pressure_label" />
+
+        <TextView
+            android:id="@+id/localViewPressure"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32sp" />
+
+        <TextView
+            android:id="@+id/labelMagneticField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/magnetic_field_label" />
+
+        <TextView
+            android:id="@+id/localViewMagneticField"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32sp" />
+
+        <TextView
+            android:id="@+id/labelLight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/light_label" />
+
+        <TextView
+            android:id="@+id/localViewLight"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32sp" />
+
+        <TextView
+            android:id="@+id/labelRelativeHumidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/relative_humidity" />
+
+        <TextView
+            android:id="@+id/localViewRelativeHumidity"
+            android:layout_width="156dp"
+            android:layout_height="25dp" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
