--- a/app/src/main/res/layout/fragment_local_data.xml
+++ b/app/src/main/res/layout/fragment_local_data.xml
@@ -21,7 +21,8 @@
         <TextView
             android:id="@+id/localViewAmbientTemperatureData"
             android:layout_width="156dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:text="@string/sensor_not_available" />
 
         <Space
             android:layout_width="match_parent"
@@ -36,7 +37,8 @@
         <TextView
             android:id="@+id/localViewProximity"
             android:layout_width="156dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:text="@string/sensor_not_available" />
 
         <Space
             android:layout_width="match_parent"
@@ -51,22 +53,8 @@
         <TextView
             android:id="@+id/localViewPressure"
             android:layout_width="156dp"
-            android:layout_height="25dp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="32sp" />
-
-        <TextView
-            android:id="@+id/labelMagneticField"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/magnetic_field_label" />
-
-        <TextView
-            android:id="@+id/localViewMagneticField"
-            android:layout_width="156dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:text="@string/sensor_not_available" />
 
         <Space
             android:layout_width="match_parent"
@@ -81,7 +69,8 @@
         <TextView
             android:id="@+id/localViewLight"
             android:layout_width="156dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:text="@string/sensor_not_available" />
 
         <Space
             android:layout_width="match_parent"
@@ -96,7 +85,8 @@
         <TextView
             android:id="@+id/localViewRelativeHumidity"
             android:layout_width="156dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:text="@string/sensor_not_available" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
