--- a/app/src/main/res/layout/fragment_cloud_data.xml
+++ b/app/src/main/res/layout/fragment_cloud_data.xml
@@ -1,13 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.tab.CloudDataFragment">
+    tools:context=".ui.tab.LocalDataFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/cloud_data_fragment_title" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="317dp" />
+
+        <Button
+            android:id="@+id/refreshButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Refresh" />
+
+        <TextView
+            android:id="@+id/x_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="X axis"
+            android:textAlignment="center" />
+
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/imageFilterView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/y_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Y axis"
+            android:textAlignment="center" />
+
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/imageFilterView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background" />
+
+        <TextView
+            android:id="@+id/x_img3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Z axis"
+            android:textAlignment="center" />
+
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/imageFilterView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
